# SimpleServerFramework

./: .gitignore  README.md
Documents/: 框架设计.vsdx
comm/: configure.cpp  configure.h  log.cpp  log.h  tools.cpp  tools.h
comm/rabbitmq/: rabbitmq.cpp  rabbitmq.h
example/: config.xml  makefile
example/src/: main_conf.h
frame/: frame.cpp  frame.h  main.cpp
frame/comm/: configure.h  log.h  tools.h
frame_libevent_http/example/: CMakeLists.txt  config.xml  makefile
frame_libevent_http/example/src/: main_conf.h
frame_libevent_http/frame/: libevent_http_frame.cpp  libevent_http_frame.h
libevent_frame/: libevent_frame.cpp  libevent_frame.h  timer.h
libevent_frame/example/: CMakeLists.txt  make.sh  makefile  restart.sh
libevent_frame/example/src/: main_conf.h
libevent_frame/example/src/logic_model/: example_logic.h
libevent_frame/example/src/packet_model/: example_packet.h
libevent_frame/example/src/timer_model/: example_timer.h
libevent_frame/frame/: custom_packet_model.h  deal_model.h  http_server.cpp  http_server.h  libevent_frame.cpp  libevent_frame.h  packet_model.cpp  timer.cpp  timer_server.cpp
libevent_http_frame/: ReadMe.md
libevent_http_frame/example/: CMakeLists.txt  config.xml  make.sh  makefile  restart.sh  test.sh
libevent_http_frame/example/src/: main_conf.h
libevent_http_frame/example/src/logic_model/: example_logic.cpp  example_logic.h
libevent_http_frame/example/src/packet_model/: example_packet.cpp
libevent_http_frame/frame/: custom_packet_model.cpp  deal_model.h  http_server.cpp  http_server.h  libevent_http_frame.cpp  libevent_http_frame.h  packet_model.cpp  packet_model.h
libevent_rpc_frame/: ReadMe.md
libevent_rpc_frame/example/: CMakeLists.txt  config.xml  restart.sh  test.sh
libevent_rpc_frame/example/src/: main_conf.h
libevent_rpc_frame/example/src/logic_model/: example_logic.cpp  example_logic.h
libevent_rpc_frame/example/src/packet_model/: example_packet.cpp  example_packet.h
libevent_rpc_frame/frame/: deal_model.h  libevent_rpc_frame.cpp  libevent_rpc_frame.h  packet_model.cpp  packet_model.h  rpc_server.cpp  rpc_server.h
libevent_tcp_bufferevent_frame/example_simple/: CMakeLists.txt  config.xml  restart.sh
libevent_tcp_bufferevent_frame/example_simple/src/simple_example/: example_packet_model.cpp  example_packet_model.h  example_protocol.cpp  example_protocol.h
libevent_tcp_bufferevent_frame/frame/: deal_model.h  protocol.h  socket_handle.cpp  socket_handle.h  tcp_server.cpp  tcp_server.h
libevent_tcp_frame/example/: CMakeLists.txt  config.xml  make.sh  restart.sh
libevent_tcp_frame/example/src/: exampe_packet_model.cpp  exampe_packet_model.h  example_protocol.h  main_conf.h
libevent_tcp_frame/example/src/client_example/: client.cpp  public.h
libevent_tcp_frame/example/src/pb_example/: pb_deal_model.cpp  pb_deal_model.h  pb_packet_model.cpp  pb_packet_model.h  pb_protocol.cpp  pb_protocol.h
libevent_tcp_frame/example/src/pb_example_client/: client.cpp  pb_client_packet_model.h
libevent_tcp_frame/example/src/pb_protocol/: basic_protocol.proto
libevent_tcp_frame/example/src/simple_example/: example_deal_model.cpp  example_packet_model.cpp  example_protocol.cpp
libevent_tcp_frame/example_pb/: CMakeLists.txt  config.xml  restart.sh
libevent_tcp_frame/example_pb/src/: main_conf.h
libevent_tcp_frame/example_pb/src/pb_example/: pb_deal_model.cpp  pb_packet_model.cpp  pb_packet_model.h  pb_protocol.cpp  pb_protocol.h
libevent_tcp_frame/example_pb/src/pb_example_client/: client.cpp  pb_client_packet_model.cpp  public.h
libevent_tcp_frame/example_pb/src/pb_protocol/: basic_protocol.proto
libevent_tcp_frame/example_simple/: CMakeLists.txt  config.xml  restart.sh
libevent_tcp_frame/example_simple/src/: main_conf.h
libevent_tcp_frame/example_simple/src/simple_example/: example_deal_model.cpp  example_deal_model.h  example_protocol.cpp  example_protocol.h
libevent_tcp_frame/frame/: libevent_tcp_frame.cpp  libevent_tcp_frame.h  packet_model.cpp  packet_model.h  protocol.h  socket_handle.cpp  socket_handle.h  tcp_client.cpp  tcp_client.h  tcp_server.cpp  tcp_server.h
libevent_timer_frame/: ReadMe.md
libevent_timer_frame/example/: CMakeLists.txt  config.xml  restart.sh
libevent_timer_frame/example/src/: main_conf.h
libevent_timer_frame/example/src/timer_model/: example_timer.cpp
libevent_timer_frame/frame/: libevent_timer_frame.cpp  libevent_timer_frame.h  timer_server.h
